# KoShelf

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  Makefile.toml  README.md  README.pt-BR.md  build.rs  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: ci.yml  main.yml  release.yml
assets/: style.css
assets/static_build/: base.js  calendar.css  calendar.js  compiled_calendar.css  compiled_style.css  item_detail.js  library_list.js  recap.js  service-worker.js  statistics.js
assets/ts/app/: base.ts
assets/ts/components/: language-selector.ts
assets/ts/pages/: recap.ts
assets/ts/shared/: i18n.ts
locales/: en.ftl  pt.ftl
scripts/: build-frontend.sh  build_macos_app.sh
src/: app.rs  cli.rs  config.rs  lib.rs  main.rs
src/i18n/: mod.rs  translations.rs
src/models/: library_item.rs
src/server/: web.rs
src/site_generator/: mod.rs
templates/: bottom_navbar.html  setup.html  sidebar.html
