[package]
name = "koshelf"
version = "2.0.11"
description = "Transform your KOReader library into a beautiful reading dashboard with statistics."
repository = "https://github.com/paviro/KOShelf"
license = "EUPL-1.2 license"
authors = ["Paul-Vincent Roll"]
edition = "2024"
build = "build.rs"

[dependencies]
# CLI
clap = { version = "4.5.40", features = ["derive"] }
# Error handling
anyhow = "1.0.98"
# Async
tokio = { version = "1.45.1", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "signal",
    "time",
    "sync",
] }
# File system
walkdir = "2.5.0"
# File system watching
notify = "8.0.0"
# Temporary directories
tempfile = "3.20.0"
# EPUB and .fb2.zip parsing
zip = "6"
# Image processing
image = { version = "0.25.6", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
    "gif",
] }
webp = "0.3.1"
# Lua parsing (use LuaJIT to match KoReader's runtime)
mlua = { version = "0.11.5", features = ["luajit", "vendored"] }
# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
# Templating
askama = "0.14.0"
# Date/time
chrono = { version = "0.4.41", features = ["serde", "std", "unstable-locales"] }
# Logging
log = "0.4.27"
env_logger = "0.11.8"
# Progress bars
indicatif = "0.18"
# XML parsing
quick-xml = "0.38"
# HTML sanitization
ammonia = "4.1.2"
# Web server (for live server mode)
axum = "0.8.4"
tower = "0.5"
tower-http = { version = "0.6", features = [
    "fs",
    "cors",
    "compression-gzip",
    "compression-br",
] }
# Futures utilities
futures = "0.3"
# SQLite database access
rusqlite = { version = "0.37", features = ["bundled"] }
minify-html = "0.18"
chrono-tz = "0.10"
md5 = "0.8.0"
regex = "1.12.2"
resvg = "0.45.1"
base64 = "0.22"
include_dir = "0.7.4"
unic-langid = "0.9"
# ICU4X for localized language display names
icu_displaynames = "0.11"
icu_locid = "1.4"
fluent = "0.16"
fluent-bundle = "0.15"
intl-memoizer = "0.5"
actix-web = "4.12.1"
actix-files = "0.6.9"
actix-cors = "0.7.1"

[target.'cfg(not(windows))'.dependencies]
# CBR/RAR archive extraction (not supported on Windows)
unrar = "0.5"

[build-dependencies]
ureq = "3.1.4"

[dev-dependencies]
ureq = { version = "3.1.4", features = ["json"] }
rayon = "1.11.0"
fluent-syntax = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
